First commit(After changes)

--- a/Cycle_1/WebContent/confirmation.html
+++ b/Cycle_1/WebContent/confirmation.html
@@ -14,7 +14,7 @@
 	Your order is placed.You will recieve the books soon!
 	<br>Happy shopping!
 	<br><br>
-	<a href="homepage.html" style="color: #663300;background-color: white;text-decoration: blink;"><b>Home</b></a>
+	<a href="bookslist.html" style="color: #663300;background-color: white;text-decoration: blink;"><b>Books list</b></a>
 	<br><br>
 	</div>
 
