--- a/Cycle_1/WebContent/bookslist.html
+++ b/Cycle_1/WebContent/bookslist.html
@@ -24,9 +24,10 @@
 	</style>
 </head>
 <body style="background: linear-gradient(to bottom, #ffffff 0%, #99ff33 100%);height: 100%;">
-
+<a href="profile.html" style="color: #663300;background-color: white;text-decoration: blink;margin-left: 95%;"><b>Profile</b></a>
 	<h1 style="color: #074F59; text-align: center;" >Welcome to Book Mela</h1>
 	<h1 style="color: #074F59; text-align: center;" >Online book store</h1><br>
+	
 	
 	<div class="white-box" style="background-color: white;text-align: center;margin-top: 50px;margin-left:150px;width:80%;height: 60%;">
 		<h3>TEXTBOOKS AVAILABLE</h3>
