--- a/Cycle_1/WebContent/payment.html
+++ b/Cycle_1/WebContent/payment.html
@@ -17,8 +17,8 @@
 	
 </style>
 </head>
-<body style="background: linear-gradient(to bottom, #ffffff 0%, #669999 100%);height: 640px;">
-
+<body style="background: linear-gradient(to bottom, #ffffff 0%, #669999 100%);height: 650px;">
+	<a href="profile.html" style="color: #663300;background-color: white;text-decoration: blink;margin-left: 95%;"><b>Profile</b></a>
 	<h1 style="color: #074F59; text-align: center;" >Welcome to Book Mela</h1>
 	<h1 style="color: #074F59; text-align: center;" >Online book store</h1><br>
 	
