--- a/Cycle_1/WebContent/shoppingcart.html
+++ b/Cycle_1/WebContent/shoppingcart.html
@@ -6,6 +6,7 @@
 </head>
 <body style="background: linear-gradient(to bottom, #ffffff 0%, #99ccff 100%);height: 640px;">
 
+	<a href="profile.html" style="color: #663300;background-color: white;text-decoration: blink;margin-left: 95%;"><b>Profile</b></a>
 	<h1 style="color: #074F59; text-align: center;" >Welcome to Book Mela</h1>
 	<h1 style="color: #074F59; text-align: center;" >Online book store</h1><br>
 	
