--- a/Cycle_1/WebContent/shoppingcart.html
+++ b/Cycle_1/WebContent/shoppingcart.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Shopping cart</title>
-</head>
-<body style="background: linear-gradient(to bottom, #ffffff 0%, #99ccff 100%);height: 640px;">
-
-	<a href="profile.html" style="color: #663300;background-color: white;text-decoration: blink;margin-left: 95%;"><b>Profile</b></a>
-	<h1 style="color: #074F59; text-align: center;" >Welcome to Book Mela</h1>
-	<h1 style="color: #074F59; text-align: center;" >Online book store</h1><br>
+	<head>
+		<meta charset="UTF-8">
+		<title>Shopping cart</title>
+		
+		
+		<script>
+		
+			function validate(){
+				qty = cartForm.quantity.value;
+				
+				if(qty <= 0){					
+					alert("Please fill the correct quantity.");
+					return false;
+				}
+				
+			}
+		
+		</script>
+	</head>
+	<body style="background: linear-gradient(to bottom, #ffffff 0%, #99ccff 100%);height: 640px;">
 	
-	<div class="white-box" style="background-color: white;text-align: center;margin-top: 50px;margin-left:150px;width:50%;">
-		<br><h1>Shopping cart</h1>
-		Select the book:<br>
+		<a href="profile.html" style="color: #663300;background-color: white;text-decoration: blink;margin-left: 95%;"><b>Profile</b></a>
+		<h1 style="color: #074F59; text-align: center;" >Welcome to Book Mela</h1>
+		<h1 style="color: #074F59; text-align: center;" >Online book store</h1><br>
 		
-			<select name="cars" id="cars">
-			    <option value="#">----</option>
-			    <option value="#">PPS for C</option>
-			    <option value="#">Mathematics</option>
-			    <option value="#">OOP through C++</option>
-			    <option value="#">Java</option>
-			    <option value="#">Python</option>
-			    <option value="#">DBMS</option>
-			    <option value="#">OS</option>
-			    <option value="#">WT</option>
-			    <option value="#">CN</option>			    
-			</select>
-			<br><br>
-		
-		Quantity<br>
-		<input type="number" >
-		<br><br><br>
-		
-		Cost of any book is ₹ 200. <br><br><br>
-		
-		<a href="payment.html" style="color: #663300;background-color: white;text-decoration: blink;"><b>Proceed to pay</b></a>
-		<br><br><br>
-		
-		
-		
-  
-	</div>
-
-
-
-</body>
+		<div class="white-box" style="background-color: white;text-align: center;margin-top: 50px;margin-left:150px;width:50%;">
+			<br><h1>Shopping cart</h1>
+			Select the book:<br>
+			<form name="cartForm" action="payment.html" onsubmit="return validate()">
+				<select name="cars" id="cars" required="required">
+				    <option value="">----</option>
+				    <option value="#">PPS for C</option>
+				    <option value="#">Mathematics</option>
+				    <option value="#">OOP through C++</option>
+				    <option value="#">Java</option>
+				    <option value="#">Python</option>
+				    <option value="#">DBMS</option>
+				    <option value="#">OS</option>
+				    <option value="#">WT</option>
+				    <option value="#">CN</option>			    
+				</select>
+				<br><br>
+			
+			Quantity<br>
+			<input type="number" name = "quantity" required="required" >
+			<br><br><br>
+			
+			Cost of any book is ₹ 200. <br><br><br>
+			
+			<input type="submit" value="Proceed" style="background-color: white;border: 0px;font-size: large;">
+			
+			
+			<br><br><br>
+			</form>
+			
+		</div>
+	
+	</body>
 </html>
 
