--- a/BookStore/WebContent/login.html
+++ b/BookStore/WebContent/login.html
@@ -42,15 +42,13 @@
 	
 	<body style="background: linear-gradient(to bottom, #ffffff 0%, #99cc00 100%);height: 640px;text-align: center;">
 		<div class="login-form"> 
-		    <form  method="post" name = "loginForm" action="bookslist.html">
+		    <form  method="post" name = "loginForm" action="loginServlet">
 		        <h2 class="text-center">Log in</h2>       
 		        <div class="form-group">
-		            <input type="text" class="form-control" placeholder="Username" name="username" 
-		             required="required">
+		            <input type="text" class="form-control" placeholder="Username" name="username" required="required">
 		        </div>
 		        <div class="form-group">
-		            <input type="password" class="form-control" placeholder="Password" name="password" 
-		             required="required">
+		            <input type="password" class="form-control" placeholder="Password" name="password" required="required">
 		        </div>
 		        <input type="submit" value="Login" style="background-color: #f7f7f7;border: 0px;font-size: large;">
 		        
